# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/av_transport/distributed_av_transport.gni")

config("sender_external_config") {
  include_dirs = [
    "${common_path}/include",
    "${dh_fwk_sdk_path}/include",
    "${engine_path}/av_sender/include",
    "${engine_path}/av_receiver/include",
    "${interface_path}",
  ]
}

ohos_shared_library("distributed_av_sender") {
  public_configs = [ ":sender_external_config" ]

  include_dirs = [
    "${drivers_disaplay_path}/interfaces/include",
    "${media_standard_path}/interfaces/inner_api/native",
    "//third_party/json/include",

    "${dh_fwk_utils_path}/include",
    "${control_center_path}/inner_kits/include",
    "${control_center_path}/inner_kits/include/ipc",
    "${filters_path}/av_transport_input",
    "${filters_path}/av_transport_output",
  ]

  sources = [
    "${common_path}/src/av_sync_utils.cpp",
    "${common_path}/src/av_trans_buffer.cpp",
    "${common_path}/src/av_trans_log.cpp",
    "${common_path}/src/av_trans_message.cpp",
    "${common_path}/src/av_trans_meta.cpp",
    "${common_path}/src/av_trans_utils.cpp",
    "${common_path}/src/softbus_channel_adapter.cpp",
    "${engine_path}/av_sender/src/av_sender_engine.cpp",
    "${engine_path}/av_sender/src/av_sender_engine_provider.cpp",
  ]

  deps = [
    "${dh_fwk_sdk_path}:libdhfwk_sdk",
    "${filters_path}:avtrans_input_filter",
    "${filters_path}:avtrans_output_filter",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_trans_sender\"",
    "LOG_DOMAIN=0xD004100",
  ]

  defines += [
    "MEDIA_OHOS",
    "RECORDER_SUPPORT",
    "VIDEO_SUPPORT",
  ]

  external_deps = [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "graphic_2d:libgraphic_utils",
    "graphic_2d:surface",
    "hilog:libhilog",
    "histreamer:histreamer_base",
    "histreamer:histreamer_codec_filters",
    "histreamer:histreamer_ffmpeg_convert",
    "histreamer:histreamer_plugin_base",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  remove_configs = [
    "//build/config/compiler:no_rtti",
    "//build/config/compiler:no_exceptions",
  ]
  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-frtti",
    "-fexceptions",
  ]
  cflags_cc = cflags

  part_name = "distributed_hardware_fwk"
  subsystem_name = "distributedhardware"
}
