# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/av_transport/distributed_av_transport.gni")

ohos_source_set("avtrans_input_filter") {
  include_dirs = [
    "${plugin_path}/core",
    "${plugin_path}/interface",
    "${common_path}/include",
  ]

  sources = [
    "${plugin_path}/core/avtrans_input.cpp",
    "av_transport_input/av_transport_input_filter.cpp",
  ]

  if (histreamer_compile_part) {
    external_deps = [
      "histreamer:histreamer_base",
      "histreamer:histreamer_codec_filters",
      "histreamer:histreamer_ffmpeg_convert",
      "histreamer:histreamer_plugin_base",
    ]

    external_deps += [
      "bounds_checking_function:libsec_shared",
      "hilog:libhilog",
    ]
  }

  public_deps = [
    "${plugin_path}/plugins/av_trans_input/daudio_input:plugin_AVTransDaudioInput",
    "${plugin_path}/plugins/av_trans_input/dscreen_input:plugin_AVTransDscreenInput",
    "${plugin_path}/plugins/av_trans_input/dsoftbus_input:plugin_AVTransDsoftbusInput",
    "${plugin_path}/plugins/av_trans_input/dsoftbus_input_audio:plugin_AVTransDsoftbusInputAudio",
  ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-fexceptions",
    "-Wno-unused-but-set-variable",
    "-Wno-format",
  ]
  cflags_cc = cflags
  part_name = "distributed_hardware_fwk"
  subsystem_name = "distributedhardware"

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_transport_input_filter\"",
    "HST_ANY_WITH_NO_RTTI",
    "LOG_DOMAIN=0xD004100",
  ]
}

ohos_source_set("avtrans_output_filter") {
  include_dirs = [
    "${plugin_path}/core",
    "${plugin_path}/interface",
    "${common_path}/include",
  ]

  sources = [
    "${plugin_path}/core/avtrans_output.cpp",
    "av_transport_output/av_transport_output_filter.cpp",
  ]

  if (histreamer_compile_part) {
    external_deps = [
      "histreamer:histreamer_base",
      "histreamer:histreamer_codec_filters",
      "histreamer:histreamer_ffmpeg_convert",
      "histreamer:histreamer_plugin_base",
    ]
  }

  external_deps += [
    "bounds_checking_function:libsec_shared",
    "hilog:libhilog",
  ]

  public_deps = [
    "${plugin_path}/plugins/av_trans_output/daudio_output:plugin_AVTransDaudioOutput",
    "${plugin_path}/plugins/av_trans_output/dscreen_output:plugin_AVTransDscreenOutput",
    "${plugin_path}/plugins/av_trans_output/dsoftbus_output:plugin_AVTransDsoftbusOutput",
    "${plugin_path}/plugins/av_trans_output/dsoftbus_output_audio:plugin_AVTransDsoftbusOutputAudio",
  ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-fexceptions",
    "-Wno-unused-but-set-variable",
    "-Wno-format",
  ]
  cflags_cc = cflags
  part_name = "distributed_hardware_fwk"
  subsystem_name = "distributedhardware"

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_transport_output_filter\"",
    "HST_ANY_WITH_NO_RTTI",
    "LOG_DOMAIN=0xD004100",
  ]
}
