# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/av_transport/distributed_av_transport.gni")

ohos_shared_library("histreamer_ability_querier") {
  include_dirs = [
    "include",
    "//third_party/json/include",
    "${histreamer_path}",
    "${histreamer_path}/include",
    "${histreamer_path}/include/plugin",
    "${histreamer_path}/include/plugin/common",
    "${histreamer_path}/include/pipeline/core",
    "${histreamer_path}/plugin/core",
    "${histreamer_path}/pipeline/filters/common",
    "${histreamer_path}/scene/standard",
    "${media_standard_path}/interfaces/inner_api/native",
    "${common_path}/include",
  ]

  sources = [
    "${common_path}/src/av_trans_log.cpp",
    "src/histreamer_ability_querier.cpp",
  ]

  deps = [
    "${histreamer_path}/pipeline:histreamer_base",
    "${histreamer_path}/plugin:histreamer_plugin_base",
    "${histreamer_path}/plugin:histreamer_plugin_core",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributed_av_transport\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-frtti",
    "-fexceptions",
    "-Wno-unused-but-set-variable",
    "-Wno-format",
  ]

  cflags_cc = cflags

  remove_configs = [
    "//build/config/compiler:no_rtti",
    "//build/config/compiler:no_exceptions",
  ]

  subsystem_name = "multimedia"
  part_name = "histreamer"
}

ohos_rust_shared_ffi("histreamer_ability_querier_core") {
  sources = [ "src/histreamer_ability_querier_core.rs" ]
  crate_name = "histreamer_ability_querier_core"
  crate_type = "cdylib"
  subsystem_name = "distributedhardware"
  part_name = "distributed_hardware_fwk"
}
