# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../distributedhardwarefwk.gni")

ohos_shared_library("hardwaremanager") {
  include_dirs = [
    "include",
    "${common_path}/log/include",
    "${common_path}/utils/include",
    "${innerkits_path}/include",
    "${innerkits_path}/include/ipc",
    "${services_path}/distributedhardwarefwkservice/include/componentmanager",
    "${services_path}/distributedhardwarefwkservice/include/lowlatency",
    "${services_path}/distributedhardwarefwkservice/include/utils",
    "${services_path}/distributedhardwarefwkservice/include/task",
    "${services_path}/distributedhardwarefwkservice/include/resourcemanager",
    "${av_trans_path}/common/include",
    "${utils_path}/include/log",
  ]

  sources = [ "src/native_distributedhardwarefwk_js.cpp" ]

  deps = [
    "${distributedhardwarefwk_path}/interfaces/inner_kits:libdhfwk_sdk",
    "${services_path}/distributedhardwarefwkservice:distributedhardwarefwksvr",
    "${utils_path}:distributedhardwareutils",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedhardwaremanager_js\"",
    "LOG_DOMAIN=0xD004100",
  ]

  external_deps = [
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "cJSON:cjson",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  subsystem_name = "distributedhardware"
  relative_install_dir = "module/distributedhardware"
  part_name = "distributed_hardware_fwk"
}
