# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../distributedhardwarefwk.gni")

ohos_shared_library("hardwaremanager") {
  sanitize = {
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "${common_path}/log/include",
    "${common_path}/utils/include",
    "${innerkits_path}/include",
    "${innerkits_path}/include/ipc",
    "${av_trans_path}/common/include",
  ]

  sources = [ "src/native_distributedhardwarefwk_js.cpp" ]

  deps = [
    "${distributedhardwarefwk_path}/interfaces/inner_kits:libdhfwk_sdk",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedhardwaremanager_js\"",
    "LOG_DOMAIN=0xD004100",
  ]

  cflags = [
    "-fstack-protector-strong",
    "-D_FORTIFY_SOURCE=2",
    "-O2",
  ]

  cflags_cc = cflags

  ldflags = [
    "-fpie",
    "-Wl,-z,relro",
    "-Wl,-z,now",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libtokensetproc_shared",
    "bundle_framework:appexecfwk_base",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  subsystem_name = "distributedhardware"
  relative_install_dir = "module/distributedhardware"
  part_name = "distributed_hardware_fwk"

  public_configs = [ "${innerkits_path}:dhfwk_idl_hardware_config" ]
}
