# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/distributedhardwarefwk.gni")

module_out_path = unittest_output_path

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${utils_path}/include",
    "${common_path}/utils/include",
  ]
}

## UnitTest dh_utils_tool_test
ohos_unittest("UtilsToolTest") {
  module_out_path = module_out_path

  sources = [
    "${utils_path}/test/utilstool/utils_tool_test.cpp",
    "${utils_path}/test/utilstool/device_param_mgr_test.cpp",
    "${utils_path}/test/utilstool/mock_os_account_manager.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [ "${utils_path}:distributedhardwareutils" ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gmock_main",
    "hitrace:hitrace_meter",
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  cflags = [ "-Dprivate=public" ]

  if (dhfwk_os_account) {
    external_deps += [
      "os_account:libaccountkits",
      "os_account:os_account_innerkits",
    ]
  }
}

group("utils_tool_test") {
  testonly = true
  deps = [ ":UtilsToolTest" ]
}
