# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "avtranscallbacknotify_fuzzer:fuzztest",
    "avtranscallbacksetparameter_fuzzer:fuzztest",
    "avtranscallbacksetsharedmemory_fuzzer:fuzztest",
    "avtransonsessionclosed_fuzzer:fuzztest",
    "avtransstubonremoterequest_fuzzer:fuzztest",
    "onbytesreceived_fuzzer:fuzztest",
    "onsoftbustimesyncresult_fuzzer:fuzztest",
    "onstreamreceived_fuzzer:fuzztest",
  ]
}
