# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("plugin_test") {
  testonly = true

  deps = [
    "av_trans_input/daudio_input_test:daudio_input_unittest",
    "av_trans_input/dscreen_input_test:dscreen_input_unittest",
    "av_trans_input/dsoftbus_input_audio_test:dsoftbus_input_audio_unittest",
    "av_trans_input/dsoftbus_input_test:dsoftbus_input_unittest",
    "av_trans_output/daudio_output_test:daudio_output_unittest",
    "av_trans_output/dscreen_output_test:dscreen_output_unittest",
    "av_trans_output/dsoftbus_output_audio_test:dsoftbus_output_audio_unittest",
    "av_trans_output/dsoftbus_output_test:dsoftbus_output_unittest",
    "core:avtrans_input_output_unittest",
  ]
}
