# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../distributed_av_transport.gni")

module_out_path = "distributed_hardware_fwk/av_sync_utils_test"

ohos_unittest("AvSyncUtilsTest") {
  module_out_path = module_out_path

  include_dirs = [
    "${common_path}/include",
    "${plugin_path}/core",
    "${plugin_path}/interface",
    "${output_controller_path}/include",
    "${plugin_path}/interface",
  ]

  sources = [ "av_sync_utils_test.cpp" ]

  deps = [
    "${dh_fwk_sdk_path}:libdhfwk_sdk",
    "${dh_fwk_services_path}/distributedhardwarefwkservice:distributedhardwarefwksvr",
  ]

  if (histreamer_compile_part) {
    external_deps = [
      "media_foundation:histreamer_base",
      "media_foundation:histreamer_codec_filters",
      "media_foundation:histreamer_ffmpeg_convert",
      "media_foundation:histreamer_plugin_base",
    ]
  }

  external_deps += [
    "bounds_checking_function:libsec_shared",
    "cJSON:cjson",
    "c_utils:utils",
    "ipc:ipc_core",
  ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-fexceptions",
    "-Dprivate = public",
    "-Dprotected = public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_sync_utils_test\"",
    "LOG_DOMAIN=0xD004101",
  ]

  cflags_cc = cflags
}

group("av_sync_utils_test") {
  testonly = true
  deps = [ ":AvSyncUtilsTest" ]
}
