# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../distributed_av_transport.gni")

config("av_pipeline_demo_external_config") {
  include_dirs = [
    "${common_path}/include",
    "${dh_fwk_sdk_path}/include",
    "${interface_path}",
  ]
}

ohos_executable("av_trans_pipelie_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_no_nvcall = true
    cfi_vcall_icall_only = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"
  public_configs = [ ":av_pipeline_demo_external_config" ]

  include_dirs = [
    "./include",
    "${distributed_av_transport_path}/framework",
    "${distributed_av_transport_path}/framework/filter/include",
  ]

  sources = [
    "${distributed_av_transport_path}/framework/test/demo/head_filter.cpp",
    "${distributed_av_transport_path}/framework/test/demo/mid_filter.cpp",
    "${distributed_av_transport_path}/framework/test/demo/pipe_demo.cpp",
    "${distributed_av_transport_path}/framework/test/demo/tail_filter.cpp",
  ]

  deps = [
    "${dh_fwk_sdk_path}:libdhfwk_sdk",
    "${distributed_av_transport_path}/framework:distributed_av_pipeline_fwk",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_trans_pipe_demo\"",
    "LOG_DOMAIN=0xD004101",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  if (histreamer_compile_part) {
    external_deps += [ "media_foundation:media_foundation" ]
  }

  cflags = [
    "-fexceptions",
    "-fno-rtti",
    "-fPIC",
    "-O2",
    "-Wall",
  ]
  cflags_cc = cflags

  install_enable = false
  part_name = "distributed_hardware_fwk"
  subsystem_name = "distributedhardware"
}
