# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true

  deps = [
    "accessmanager_fuzzer:fuzztest",
    "accessmanageroffline_fuzzer:fuzztest",
    "capabilityinfomanager_fuzzer:fuzztest",
    "componentdisable_fuzzer:fuzztest",
    "componentenable_fuzzer:fuzztest",
    "componentloader_fuzzer:fuzztest",
    "componentmanager_fuzzer:fuzztest",
    "dhmanagerfactory_fuzzer:fuzztest",
    "dhtransport_fuzzer:fuzztest",
    "distributedfwkservices_fuzzer:fuzztest",
    "enabledcompsdump_fuzzer:fuzztest",
    "metainfomgr_fuzzer:fuzztest",
    "publisher_fuzzer:fuzztest",
    "publisheritem_fuzzer:fuzztest",
    "resourcemanager_fuzzer:fuzztest",
    "task_fuzzer:fuzztest",
    "versioninfomanager_fuzzer:fuzztest",
  ]
}
