# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("test") {
  testonly = true

  deps = [
    "common/accessmanager:AccessManagerTest",
    "common/componentloader:component_loader_test",
    "common/componentmanager/component_manager:component_manager_test",
    "common/componentmanager/component_monitior:component_monitor_test",
    "common/dbadapter:db_adapter_test",
    "common/distributedhardwaremanager:distributed_hardware_manager_test",
    "common/distributedhardwareservice:distributed_hardware_service_test",
    "common/distributedhardwarestub:distributed_hardware_stub_test",
    "common/hidumphelper/enabledcompsdump:enabled_comps_dump_test",
    "common/hidumphelper/hidumphelper:hidump_helper_test",
    "common/localhardwaremanager/localhardwaremanager:local_hardware_manager_test",
    "common/localhardwaremanager/pluginlistenerimpl:plugin_listener_impl_test",
    "common/lowlatency/lowlatency:low_latency_test",
    "common/lowlatency/lowlatencylistener:low_latency_listener_test",
    "common/publisher:publisher_item_test",
    "common/resourcemanager:resource_manager_test",
    "common/task:dh_task_test",
    "common/versioninfomanager/versioninfo:version_info_test",
    "common/versioninfomanager/versioninfomanager:versioninfo_manager_test",
    "common/versionmanager:version_manager_test",
  ]
}
