# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_hardware_fwk/distributedhardwarefwk.gni")

##############################fuzztest##########################################
ohos_fuzztest("UtilsFuzzTest") {
  module_out_path = "distributed_hardware_fwk/utils"
  fuzz_config_file = "//foundation/distributedhardware/distributed_hardware_fwk/utils/test/fuzztest/utils_fuzzer"

  include_dirs = [
    "${utils_path}/include",
    "${utils_path}/include/log",
    "${common_path}/utils/include",
    "//utils/native/base/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "utils_fuzzer.cpp" ]

  deps = [ "//foundation/distributedhardware/distributed_hardware_fwk/utils:distributedhardwareutils" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":UtilsFuzzTest" ]
}
###############################################################################
