# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../distributed_av_transport.gni")

##############################fuzztest##########################################
ohos_fuzztest("AVTransCallbackNotifyFuzzTest") {
  module_out_path = fuzz_test_output_path
  fuzz_config_file =
      "${control_center_path}/test/fuzztest/avtranscallbacknotify_fuzzer"

  include_dirs = [
    "include",
    "${common_path}/include",
    "${dh_fwk_utils_path}/include",
    "${interface_path}",
    "${control_center_path}/inner_kits/include",
    "${control_center_path}/inner_kits/include/ipc",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "avtranscallbacknotify_fuzzer.cpp" ]

  deps = [ "${dh_fwk_sdk_path}:libdhfwk_sdk" ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"AVTransCallbackNotifyFuzzTest\"",
    "LOG_DOMAIN=0xD004101",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":AVTransCallbackNotifyFuzzTest" ]
}
###############################################################################
