# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../distributed_av_transport.gni")

module_out_path =
    "distributed_hardware_fwk/distributed_hardware_fwk/av_trans_input"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${filters_path}/av_trans_input",
    "${filters_path}/av_trans_coder",
    "${common_path}/include",
    "${distributed_av_transport_path}/framework",
    "${distributed_av_transport_path}/framework/filter/include",
    "${distributed_av_transport_path}/framework/pipeline/include",
  ]
}

ohos_unittest("AvTransAudioInputFilterTest") {
  module_out_path = module_out_path

  configs = [ ":module_private_config" ]

  sources = [ "av_trans_audio_input_filter_test.cpp" ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-fexceptions",
    "-Dprivate = public",
    "-Dprotected = public",
  ]
  cflags_cc = cflags

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_trans_audio_input_filter_test\"",
    "LOG_DOMAIN=0xD004101",
  ]

  deps = [
    "${distributed_av_transport_path}/framework:distributed_av_pipeline_fwk",
  ]

  if (histreamer_compile_part) {
    external_deps = [
      "media_foundation:histreamer_base",
      "media_foundation:histreamer_codec_filters",
      "media_foundation:histreamer_ffmpeg_convert",
    ]
  }

  external_deps += [
    "av_codec:av_codec_client",
    "av_codec:native_media_acodec",
    "bounds_checking_function:libsec_shared",
    "cJSON:cjson",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "googletest:gtest",
    "hilog:libhilog",
    "libevdev:libevdev",
  ]
}

ohos_unittest("AVTransBusInputFilterTest") {
  module_out_path = module_out_path

  configs = [ ":module_private_config" ]

  sources = [ "av_trans_bus_input_filter_test.cpp" ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-fexceptions",
    "-Dprivate = public",
    "-Dprotected = public",
  ]
  cflags_cc = cflags

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_trans_bus_input_filter_test\"",
    "LOG_DOMAIN=0xD004101",
  ]

  deps = [
    "${distributed_av_transport_path}/framework:distributed_av_pipeline_fwk",
    "${engine_path}/av_receiver:distributed_av_receiver",
  ]

  if (histreamer_compile_part) {
    external_deps = [
      "media_foundation:histreamer_base",
      "media_foundation:histreamer_codec_filters",
      "media_foundation:histreamer_ffmpeg_convert",
    ]
  }

  external_deps += [
    "av_codec:av_codec_client",
    "av_codec:native_media_acodec",
    "bounds_checking_function:libsec_shared",
    "cJSON:cjson",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "googletest:gtest",
    "hilog:libhilog",
    "libevdev:libevdev",
  ]
}

group("av_trans_input_filter_unittest") {
  testonly = true
  deps = [
    ":AVTransBusInputFilterTest",
    ":AvTransAudioInputFilterTest",
  ]
}
