# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../distributed_av_transport.gni")

module_out_path = "distributed_hardware_fwk/av_transport"

ohos_unittest("AvTransportInputFilterTest") {
  module_out_path = module_out_path

  include_dirs = [
    "${filters_path}/av_transport_input",
    "${common_path}/include",
    "//third_party/json/include",
  ]

  sources = [
    "${common_path}/src/av_sync_utils.cpp",
    "${common_path}/src/av_trans_log.cpp",
    "${common_path}/src/av_trans_meta.cpp",
    "${common_path}/src/av_trans_utils.cpp",
    "${common_path}/src/softbus_channel_adapter.cpp",
    "av_transport_input_filter_test.cpp",
  ]

  cflags = [
    "-O2",
    "-fPIC",
    "-Wall",
    "-fexceptions",
    "-Dprivate = public",
    "-Dprotected = public",
  ]
  cflags_cc = cflags

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"av_transport_input_filter_test\"",
    "LOG_DOMAIN=0xD004101",
  ]

  deps = [
    "${engine_path}/filters:avtrans_input_filter",
    "${plugin_path}/plugins/av_trans_input/dsoftbus_input:plugin_AVTransDsoftbusInput",
    "//third_party/googletest:gtest",
    "//third_party/libevdev:libevdev",
  ]

  if (histreamer_compile_part) {
    external_deps = [
      "media_foundation:histreamer_base",
      "media_foundation:histreamer_codec_filters",
      "media_foundation:histreamer_ffmpeg_convert",
      "media_foundation:histreamer_plugin_base",
    ]
  }

  external_deps += [
    "bounds_checking_function:libsec_shared",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
  ]
}

group("input_filter_unittest") {
  testonly = true

  deps = [ ":AvTransportInputFilterTest" ]
}
